--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 MINERU_TOKEN=your_mineru_token_here
 MINERU_API_BASE=https://mineru.net/api/v4
 
-# MinerU 上传配置（可选）
+# MinerU 上传配置
 BATCH_SIZE=200
 UPLOAD_ENABLE_FORMULA=True
 UPLOAD_LANGUAGE=en
@@ -13,28 +13,77 @@ UPLOAD_ENABLE_TABLE=True
 FILE_PARSE_METHOD=auto
 FILE_APPLY_OCR=False
 
-# 下载配置（可选）
-DOWNLOAD_RETRY=3
-DOWNLOAD_TIMEOUT=300
-
 # ==========================
 # 数据库配置
 # ==========================
 DB_PATH=data/artificial_joint.db
 
 # ==========================
-# OpenAI配置
+# LLM API配置
 # ==========================
+# 默认使用的LLM供应商: openai, siliconflow, deepseek, zhipu
+LLM_PROVIDER=siliconflow
+
+# ---------- OpenAI 配置 ----------
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4o
 OPENAI_API_BASE=https://api.openai.com/v1
+OPENAI_MODEL=gpt-4o
 OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 
-# Agent配置（可选）
-AGENT_MAX_ITERATIONS=5
-AGENT_TEMPERATURE=0.1
-AGENT_MAX_TOKENS=1000
-AGENT_ENABLE_MEMORY=True
+# ---------- 硅基流动 (SiliconFlow) 配置 ----------
+SILICONFLOW_API_KEY=your_siliconflow_api_key_here
+SILICONFLOW_API_BASE=https://api.siliconflow.cn/v1
+SILICONFLOW_MODEL=Qwen/Qwen2.5-72B-Instruct
+# 可选模型: Qwen/Qwen2.5-7B-Instruct, moonshotai/Kimi-K2-Instruct-0905, deepseek-ai/DeepSeek-V2.5
+SILICONFLOW_EMBEDDING_MODEL=BAAI/bge-large-zh-v1.5
+
+# ---------- DeepSeek 配置 ----------
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DEEPSEEK_API_BASE=https://api.deepseek.com/v1
+DEEPSEEK_MODEL=deepseek-chat
+DEEPSEEK_EMBEDDING_MODEL=deepseek-chat
+
+# ---------- 智谱AI (Zhipu) 配置 ----------
+ZHIPU_API_KEY=your_zhipu_api_key_here
+ZHIPU_API_BASE=https://open.bigmodel.cn/api/paas/v4
+ZHIPU_MODEL=glm-4-plus
+ZHIPU_EMBEDDING_MODEL=embedding-3
+
+# ==========================
+# LLM 调用配置
+# ==========================
+# 温度参数：控制输出随机性，0-2之间，越低越确定
+LLM_TEMPERATURE=0.1
+# Top-p采样：控制输出多样性，0-1之间
+LLM_TOP_P=0.95
+# 频率惩罚：降低重复词汇，-2.0到2.0之间
+LLM_FREQUENCY_PENALTY=0.0
+# 存在惩罚：鼓励新话题，-2.0到2.0之间
+LLM_PRESENCE_PENALTY=0.0
+
+# Chunk模式的max_tokens限制
+CHUNK_MODE_MAX_TOKENS=4096
+
+# 各模型的max_tokens限制（可选，已有默认值）
+# GPT4O_MAX_TOKENS=16000
+# GPT4O_MINI_MAX_TOKENS=16000
+# QWEN_72B_MAX_TOKENS=30000
+# KIMI_MAX_TOKENS=16000
+# DEEPSEEK_CHAT_MAX_TOKENS=8000
+
+# ==========================
+# 文本分块配置
+# ==========================
+CHUNK_SIZE=10000
+CHUNK_OVERLAP=300
+
+# ==========================
+# 网络配置
+# ==========================
+HTTP_REQUEST_TIMEOUT=30
+DOWNLOAD_RETRY=3
+DOWNLOAD_TIMEOUT=300
+DOWNLOAD_CHUNK_SIZE=8192
 
 # ==========================
 # 日志配置
