--- a/data/processed/extracted/Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications.json
+++ b/data/processed/extracted/Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications.json
@@ -1,6 +1,7 @@
 {
-  "dataid": "AJ_20251103_be0c9737",
+  "dataid": "AJ_20251119_be0c9737",
   "paper_id": "Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications",
   "records": [],
-  "count": 0
+  "count": 0,
+  "error": "Connection error."
 }
