--- a/.env.example
+++ b/.env.example
@@ -21,33 +21,26 @@ DB_PATH=data/artificial_joint.db
 # ==========================
 # LLM API配置
 # ==========================
-# 默认使用的LLM供应商: openai, siliconflow, deepseek, zhipu
-LLM_PROVIDER=siliconflow
+# 默认使用的模型（具体模型名称，由settings.py决定使用哪个API）
+# 可选: gpt-4o, gpt-4o-mini, Qwen/Qwen2.5-72B-Instruct, moonshotai/Kimi-K2-Instruct-0905, 
+#       Pro/moonshotai/Kimi-K2-Instruct-0905, deepseek-chat, deepseek-ai/DeepSeek-V2.5, glm-4-plus 等
+LLM_MODEL=moonshotai/Kimi-K2-Instruct-0905
 
 # ---------- OpenAI 配置 ----------
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_API_BASE=https://api.openai.com/v1
-OPENAI_MODEL=gpt-4o
-OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 
 # ---------- 硅基流动 (SiliconFlow) 配置 ----------
 SILICONFLOW_API_KEY=your_siliconflow_api_key_here
 SILICONFLOW_API_BASE=https://api.siliconflow.cn/v1
-SILICONFLOW_MODEL=Qwen/Qwen2.5-72B-Instruct
-# 可选模型: Qwen/Qwen2.5-7B-Instruct, moonshotai/Kimi-K2-Instruct-0905, deepseek-ai/DeepSeek-V2.5
-SILICONFLOW_EMBEDDING_MODEL=BAAI/bge-large-zh-v1.5
 
 # ---------- DeepSeek 配置 ----------
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 DEEPSEEK_API_BASE=https://api.deepseek.com/v1
-DEEPSEEK_MODEL=deepseek-chat
-DEEPSEEK_EMBEDDING_MODEL=deepseek-chat
 
 # ---------- 智谱AI (Zhipu) 配置 ----------
 ZHIPU_API_KEY=your_zhipu_api_key_here
 ZHIPU_API_BASE=https://open.bigmodel.cn/api/paas/v4
-ZHIPU_MODEL=glm-4-plus
-ZHIPU_EMBEDDING_MODEL=embedding-3
 
 # ==========================
 # LLM 调用配置
