--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,16 @@ CHUNK_SIZE=10000
 CHUNK_OVERLAP=300
 
 # ==========================
+# 并行处理配置
+# ==========================
+# 最大worker数量限制（系统不会超过这个值）
+MAX_WORKERS=4
+
+# 默认worker数量（留空则自动选择为 min(CPU核心数, MAX_WORKERS)）
+# 设置为具体数字（如2或3）可固定worker数量
+# DEFAULT_WORKERS=3
+
+# ==========================
 # 网络配置
 # ==========================
 HTTP_REQUEST_TIMEOUT=30
