--- a/data/processed/extracted/Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications.json
+++ b/data/processed/extracted/Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications.json
@@ -1,109 +1,7 @@
 {
   "dataid": "AJ_20251119_be0c9737",
   "paper_id": "Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications",
-  "records": [
-    {
-      "action": "new",
-      "data": {
-        "数据标识": "Ni-P纳米复合涂层硬度与热处理研究",
-        "应用部位": null,
-        "产品所属专利号或文献": null,
-        "球头信息.球头基本信息": null,
-        "球头信息.球头-成分组成": null,
-        "球头信息.球头-物理性能": "{\"硬度\": \"250-1524 HV\"}",
-        "球头信息.球头-微观组织": null,
-        "内衬信息.内衬-基本信息": "{\"材料类别\": \"Ni-P纳米复合涂层\"}",
-        "内衬信息.内衬-改性填料": null,
-        "内衬信息.内衬-成分组成": null,
-        "内衬信息.内衬-物理性能": null,
-        "内衬信息.复合材料性能": null,
-        "内衬信息.内衬-材料表征": null,
-        "股骨柄信息.股骨柄基本信息": null,
-        "股骨柄信息.股骨柄-成分组成": null,
-        "股骨柄信息.股骨柄-物理性能": null,
-        "股骨柄信息.股骨柄-微观组织": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬与球头-实验设置": "{\"热处理温度\": \"200-300 °C\", \"热处理时间\": \"30-40 周\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬与球头-实验环境-润滑液组成": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.球头磨损实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬磨损实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.球头腐蚀实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬腐蚀实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.球头表面成分分析": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.球头与锥颈-实验设置": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.锥颈与球头-实验环境-润滑液组成": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.腐蚀与磨损实验结果": null
-      },
-      "dataid": "AJ_20251119_be0c9737",
-      "paper_id": "Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications"
-    },
-    {
-      "action": "new",
-      "data": {
-        "数据标识": "CoCrMo合金微动腐蚀实验",
-        "应用部位": "髋关节",
-        "产品所属专利号或文献": null,
-        "球头信息.球头基本信息": "{\"材料类别\": \"CoCrMo合金\"}",
-        "球头信息.球头-成分组成": "{\"Co\": \"63%\", \"Cr\": \"28%\", \"Mo\": \"6%\", \"C\": \"0.25%\"}",
-        "球头信息.球头-物理性能": "{\"硬度\": \"450 HV\"}",
-        "球头信息.球头-微观组织": null,
-        "内衬信息.内衬-基本信息": null,
-        "内衬信息.内衬-改性填料": null,
-        "内衬信息.内衬-成分组成": null,
-        "内衬信息.内衬-物理性能": null,
-        "内衬信息.复合材料性能": null,
-        "内衬信息.内衬-材料表征": null,
-        "股骨柄信息.股骨柄基本信息": null,
-        "股骨柄信息.股骨柄-成分组成": null,
-        "股骨柄信息.股骨柄-物理性能": null,
-        "股骨柄信息.股骨柄-微观组织": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬与球头-实验设置": "{\"测试温度\": \"37 °C\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬与球头-实验环境-润滑液组成": "{\"类型\": \"Ringer's solution\", \"pH\": \"7.4\", \"NaCl\": \"0.9%\", \"KCl\": \"0.024%\", \"CaCl₂\": \"0.033%\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.球头磨损实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬磨损实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.球头腐蚀实验结果": "{\"开路电位\": \"-0.25 V\", \"腐蚀电流\": \"0.8 μA\", \"钝化膜电阻\": \"1.2 MΩ·cm²\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬腐蚀实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.球头表面成分分析": "{\"分析方法\": \"XPS\", \"成分\": \"Cr₂O₃, CoCr₂O₄\", \"膜厚度\": \"~3.5 nm\"}",
-        "体外实验-球头与锥颈界面微动腐蚀实验.球头与锥颈-实验设置": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.锥颈与球头-实验环境-润滑液组成": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.腐蚀与磨损实验结果": null
-      },
-      "dataid": "AJ_20251119_be0c9737",
-      "paper_id": "Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications"
-    },
-    {
-      "action": "new",
-      "data": {
-        "数据标识": "UHMWPE与CoCrMo球头摩擦磨损实验",
-        "应用部位": "髋关节",
-        "产品所属专利号或文献": null,
-        "球头信息.球头基本信息": "{\"材料类别\": \"CoCrMo合金\", \"直径\": \"28 mm\", \"加工工艺\": \"锻造\", \"表面处理\": \"抛光\", \"表面粗糙度\": \"Ra<0.05 μm\"}",
-        "球头信息.球头-成分组成": null,
-        "球头信息.球头-物理性能": "{\"硬度\": \"450 HV\"}",
-        "球头信息.球头-微观组织": null,
-        "内衬信息.内衬-基本信息": "{\"材料类别\": \"UHMWPE\", \"材料编号\": \"GUR1020\", \"分子量\": \"3.5×10⁶ g/mol\"}",
-        "内衬信息.内衬-改性填料": null,
-        "内衬信息.内衬-成分组成": null,
-        "内衬信息.内衬-物理性能": null,
-        "内衬信息.复合材料性能": null,
-        "内衬信息.内衬-材料表征": null,
-        "股骨柄信息.股骨柄基本信息": null,
-        "股骨柄信息.股骨柄-成分组成": null,
-        "股骨柄信息.股骨柄-物理性能": null,
-        "股骨柄信息.股骨柄-微观组织": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬与球头-实验设置": "{\"测试设备\": \"Pin-on-disc tribometer\", \"负载\": \"100 N\", \"测试温度\": \"37 °C\", \"测试时间\": \"24 h\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬与球头-实验环境-润滑液组成": "{\"类型\": \"bovine serum\", \"蛋白质浓度\": \"20 g/L\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.球头磨损实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬磨损实验结果": "{\"磨损率\": \"2.3 mg/Mc\", \"摩擦系数\": \"0.08\"}",
-        "体外实验-内衬与球头摩擦腐蚀实验.球头腐蚀实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.内衬腐蚀实验结果": null,
-        "体外实验-内衬与球头摩擦腐蚀实验.球头表面成分分析": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.球头与锥颈-实验设置": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.锥颈与球头-实验环境-润滑液组成": null,
-        "体外实验-球头与锥颈界面微动腐蚀实验.腐蚀与磨损实验结果": null
-      },
-      "dataid": "AJ_20251119_be0c9737",
-      "paper_id": "Advanced Science - 2021 - Zhai - Recent Progress on Wear_Resistant Materials  Designs  Properties  and Applications"
-    }
-  ],
-  "count": 3
+  "records": [],
+  "count": 0,
+  "error": "Connection error."
 }
